# ServiceMeshSidecarProxy

./: .gitignore  Dockerfile  README.md  SERVICE-MESH-SIDECAR-PLAN.md  pyproject.toml  test_proxy_demo.py
.claude/: settings.local.json
docs/: architecture.md  configuration.md  deployment.md  logging-tracing.md  plan-mtls-cert-rotation.md  plan-opentelemetry-tracing.md  plan-xds-dynamic-config.md  request-id-execution-plan.md
examples/: basic-config.yaml  k8s-deployment.yaml
scripts/: build.sh  demo_request_id.py  lint.sh  test.sh
sidecar/: __init__.py  __main__.py  main.py
sidecar/config/: __init__.py  loader.py  settings.py
sidecar/connection/: __init__.py  http_client.py  pool.py
sidecar/discovery/: __init__.py  endpoint.py  resolver.py
sidecar/health/: __init__.py  checker.py  tracker.py
sidecar/listeners/: __init__.py  inbound.py  middleware.py  outbound.py
sidecar/pipeline/: __init__.py  auth.py  circuit_breaker.py  load_balancer.py  rate_limit.py  retry.py  router.py  timeout.py
sidecar/security/: __init__.py  auth.py  tls.py
sidecar/telemetry/: __init__.py  context.py  logging.py  metrics.py  tracing.py
sidecar/utils/: __init__.py  backoff.py  time.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_request_id_e2e.py  test_sidecar_e2e.py
tests/integration/: __init__.py  test_admin_api.py  test_discovery.py  test_e2e_propagation.py  test_full_flow.py  test_inbound_listener.py  test_outbound_listener.py  test_pipeline.py  test_request_id_middleware.py  test_request_lifecycle.py
tests/unit/: __init__.py  test_config.py  (+23 more)
